--- a/VirtualAssistant/backend/routes/.env
+++ b/VirtualAssistant/backend/routes/.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGODB_URL="mongodb+srv://simransingh956429:RW6n4k7J5XjaoJhA@cluster0.hq6ng6d.mongodb.net/virtualAssistant"
+JWT_SECERET="JKDDSJDF"
